syntax = "proto3";
package orders.transactions.make;

import "gogoproto/gogo.proto";

message TransactionRequest {
  option (gogoproto.goproto_getters) = false;

  string from = 1;
  string from_id = 2;
  string classification_id = 3;
  string taker_id = 4;
  string maker_ownable_id = 5;
  string taker_ownable_id = 6;
  int64 expires_in = 7;
  string maker_ownable_split = 8;
  string taker_ownable_split = 9;
  string immutable_meta_properties = 10;
  string immutable_properties = 11;
  string mutable_meta_properties = 12;
  string mutable_properties = 13;
}